<resources>
    <string name="app_name">Family Tree</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="havent_got">Haven\'t got an account?</string>
    <string name="email_already_exists">Such email already exists</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_too_short">Password is too short</string>
    <string name="sex">Sex</string>
    <string name="birth_date">Birth Date</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_not_found">Email not found</string>
    <string name="invalid_password">Invalid password</string>
    <string name="success_sign_up">You are successfully signed up!</string>

    <string name="tree_transition">treeTransition</string>
    <string name="email_transition">emailTransition</string>
    <string name="password_transition">passwordTransition</string>
    <string name="name_transition">titleTransition</string>
    <string name="btn_transition">btnTransition</string>
</resources>
