<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standartPadding"
    android:background="@drawable/tree_background"
    tools:context=".presentation.signin.SignInFragment">

    <ImageView
        android:id="@+id/ivTree_1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/logo_tree"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        android:transitionName="@string/tree_transition"/>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTree_1"
        android:layout_marginTop="25dp"
        style="@style/TextLabelAppearenceBig"
        android:text="@string/sign_in"
        android:transitionName="@string/name_transition"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vEmailInput"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="@string/email_transition">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vPasswordInput"
        app:layout_constraintTop_toBottomOf="@id/vEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        android:transitionName="@string/password_transition">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        style="@style/GreenRoundedButton"
        android:enabled="false"
        android:layout_marginTop="@dimen/standartMargin"
        app:layout_constraintTop_toBottomOf="@id/vPasswordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:transitionName="@string/btn_transition"/>

    <ProgressBar
        android:id="@+id/pbSigning"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/bSignIn"
        app:layout_constraintBottom_toBottomOf="@id/bSignIn"
        app:layout_constraintStart_toEndOf="@id/bSignIn"
        android:layout_marginStart="@dimen/standartMargin"
        android:visibility="gone"/>

    <Button
        android:id="@+id/bForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        style="@style/GreenRoundedButton.Borderless"
        android:layout_marginTop="@dimen/standartMargin"
        app:layout_constraintTop_toBottomOf="@id/bSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="false"/>

    <Button
        android:id="@+id/bSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/GreenRoundedButton.NoBackground"
        android:layout_marginTop="@dimen/standartMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextLabelAppearenceSmall"
        android:text="@string/havent_got"
        app:layout_constraintBottom_toTopOf="@id/bSignUp"
        android:layout_marginBottom="@dimen/standartMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
