<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standartPadding"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/tree_background"
    tools:context=".presentation.signup.SignUpFragment">

    <ImageView
        android:id="@+id/ivTree"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/logo_tree"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTree"
        android:layout_marginTop="10dp"
        style="@style/TextLabelAppearenceBig"
        android:text="@string/sign_up"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vEmailInput"
        style="@style/TextInputTheme"
        app:layout_constraintTop_toBottomOf="@id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vFirstNameInput"
        app:layout_constraintTop_toBottomOf="@id/vEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/first_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vLastNameInput"
        app:layout_constraintTop_toBottomOf="@id/vFirstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/last_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vPasswordInput"
        app:layout_constraintTop_toBottomOf="@id/vLastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vBirthInput"
        app:layout_constraintTop_toBottomOf="@id/vPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dpBirth"
            android:hint="@string/birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:layout_constraintTop_toBottomOf="@id/vPasswordInput"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vSexInput"
        app:layout_constraintTop_toBottomOf="@id/vBirthInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSex"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sex"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bSignUp"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/GreenRoundedButton"
        android:layout_marginTop="@dimen/standartMargin"
        app:layout_constraintTop_toBottomOf="@id/vSexInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/pbSigning"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/bSignUp"
        app:layout_constraintBottom_toBottomOf="@id/bSignUp"
        app:layout_constraintStart_toEndOf="@id/bSignUp"
        android:layout_marginStart="@dimen/standartMargin"
        android:visibility="gone"/>

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        style="@style/GreenRoundedButton.NoBackground"
        android:layout_marginTop="@dimen/standartMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextLabelAppearenceSmall"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toTopOf="@id/bSignIn"
        android:layout_marginBottom="@dimen/standartMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>